--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,333 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+body {
+	margin: 0 80px 10px;
+}
+
+p {
+	font-family: 'Roboto', sans-serif;
+}
+
+nav {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 15px 0 15px 0;
+    background: #fff;
+	/* background: rgba(136,136,136,.6); */
+	/* position: fixed; */
+	/* top: 0; */
+	/* overflow: hidden; */
+}
+
+nav a {
+	/* padding: 0 35px; */
+	text-decoration: none;
+	color:grey;
+}
+
+nav a:hover {
+	color: rgb(134, 134, 134);
+	transition-duration: 1s;
+	box-shadow: 0 1.5px dodgerblue;
+}
+
+nav a:nth-child(1) {
+	padding-left: 10px;
+}
+
+nav a img {
+	/*  */
+	align-self: flex-end;
+}
+
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 1px solid black;
+	margin: 20px 0 0 0;
+	padding: 60px 0 60px 0;
+	/* testing */
+}
+
+.header-div {
+	width: 100%;
+}
+
+.main-heading {
+	text-align: center;
+	font-size: 76px;
+}
+
+.header-btn {
+	border: 1px solid black;
+	margin: 0 auto;
+	text-align: center;
+	width: 30%;
+}
+
+.header-btn p {
+	padding: 8px 20px;
+}
+
+.header-img {
+	vertical-align: middle;
+	text-align: right;
+}
+
+.top-content-section {
+	padding: 40px 0 0 0;
+}
+
+.top-content-contain {
+	width: 100%;
+	display: flex;
+}
+
+.top-content-features {
+	width: 50%;
+}
+
+.top-content-about {
+	width: 50%;
+}
+
+.top-content-img {
+	padding: 40px 0;
+}
+
+.top-content-img img {
+	width: 100%;
+}
+
+.bottom-content-section {
+	border-bottom: 1px solid black;
+}
+
+.bottom-content-contain {
+	width: 100%;
+	padding: 0 0 40px 0;
+	display: flex;
+}
+
+.bottom-content-services {
+	width: 33%;
+	margin-right: 1%;
+}
+
+.bottom-content-product {
+	width: 33%;
+	margin-right: 1%;
+}
+
+.bottom-content-vision {
+	width: 33%;
+	margin-left: 1.3%;
+}
+
+.contact-contain {
+	padding: 40px 0 0 0;
+}
+
+footer {
+	text-align: center;
+	padding: 60px 0 100px 0;
+}
+
+/* Media Queries */
+
+/* Mobile */
+
+@media screen and (max-width: 600px) {
+	nav {
+		flex-direction: column-reverse;
+	}
+
+	nav a {
+		width: 100%;
+		padding: 10px 0 10px;
+		text-align: center;
+		border-bottom: 1px solid black;
+	}
+
+	nav a:nth-child(7) {
+		border-bottom: none;
+	}
+
+	nav img {
+		padding: 0 0 10px 0;
+	}
+
+	header {
+		flex-direction: column;
+		padding: 0 0 40px 0;
+		margin: 10px 0 0 0;
+	}
+
+	.header-img {
+		display: none;
+	}
+
+	.top-content-contain {
+		flex-direction: column;
+	}
+
+	.top-content-features {
+		width: 100%;
+	}
+
+	.top-content-features p {
+		padding: 0 0 20px 0;
+	}
+
+	.top-content-about {
+		width: 100%;
+	}
+
+	.top-content-img {
+		padding: 20px 0;
+	}
+
+	.bottom-content-contain {
+		flex-direction: column;
+		padding: 0 0 20px 0;
+	}
+
+	.bottom-content-contain p {
+		padding: 0 0 20px 0;
+	}
+
+	.bottom-content-services {
+		width: 100%;
+		margin: 0;
+	}
+
+	.bottom-content-product {
+		width: 100%;
+		margin: 0;
+	}
+
+	.bottom-content-vision {
+		width: 100%;
+		margin: 0;
+	}
+
+	.contact-contain {
+		width: 100%;
+		text-align: center;
+		padding: 20px 0 0 0;
+	}
+
+	footer {
+		padding: 30px 0 50px;
+	}
+
+}
+
+/* tablet */
+
+@media screen and (min-width: 601px) and (max-width: 900px) {
+
+	nav {
+		flex-direction: column-reverse;
+	}
+
+	nav a {
+		width: 100%;
+		padding: 10px 0 10px;
+		text-align: center;
+		border-bottom: 1px solid black;
+	}
+
+	nav a:nth-child(7) {
+		border-bottom: none;
+	}
+
+	nav img {
+		padding: 0 0 10px 0;
+	}
+
+	header {
+		flex-direction: column;
+		padding: 0 0 40px 0;
+		margin: 10px 0 0 0;
+	}
+
+	.header-img {
+		display: none;
+	}
+
+	footer {
+		padding: 30px 0 50px;
+	}
+}
