--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5 {
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
 
 body {
-	margin: 0 80px 10px;
+	margin: 0 20px 10px;
 }
 
 p {
@@ -126,7 +126,7 @@ header {
 
 .main-heading {
 	text-align: center;
-	font-size: 76px;
+	font-size: 70px;
 }
 
 .header-btn {
@@ -206,9 +206,70 @@ footer {
 
 /* Media Queries */
 
+/* Responsive Web Design I: Adaptive Website */
+/* Introduce max-width media queries into your project at 800px and 500px */
+
+/* 800px */
+
+@media (max-width: 800px) and (min-width: 501px) {
+    nav {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin: 100px 1rem 1rem;
+    }
+
+    img.logo{
+        position: absolute;
+        top: 2rem;
+        left: 40%;
+    }
+
+    header {
+        padding: 30px 0 60px 0;
+    }
+
+    .main-heading {
+        margin: 0 0 20px 0;
+    }
+
+    header img {
+        display: none;
+    }
+
+    .top-content-features {
+        width: 48%;
+        margin-right: 2%;
+    }
+
+    .top-content-about {
+        width: 48%;
+        margin-left: 2%;
+    }
+
+    .bottom-content-services {
+        width: 30%;
+        margin-right: 3%;
+    }
+
+    .bottom-content-product {
+	    width: 30%;
+	    margin-right: 3%;
+    }
+
+    .bottom-content-vision {
+        width: 30%;
+        margin: 0;
+    }
+
+    footer {
+        padding: 30px 0 40px 0;
+    }
+}
+
 /* Mobile */
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
 	nav {
 		flex-direction: column-reverse;
 	}
@@ -292,11 +353,11 @@ footer {
 		padding: 30px 0 50px;
 	}
 
-}
+} */
 
 /* tablet */
 
-@media screen and (min-width: 601px) and (max-width: 900px) {
+/* @media screen and (min-width: 601px) and (max-width: 900px) {
 
 	nav {
 		flex-direction: column-reverse;
@@ -330,4 +391,4 @@ footer {
 	footer {
 		padding: 30px 0 50px;
 	}
-}
+} */
